middle-end: fix epilog reductions when vector iters peeled [PR113364]

This fixes a bug where vect_create_epilog_for_reduction does not handle the
case where all exits are early exits.  In this case we should do like induction
handling code does and not have a main exit.

This shows that some new miscompiles are happening (stage3 is likely miscompiled)
but that's unrelated to this patch and I'll look at it next.

gcc/ChangeLog:

	PR tree-optimization/113364
	* tree-vect-loop.cc (vect_create_epilog_for_reduction): If all exits all
	early exits then we must reduce from the first offset for all of them.

gcc/testsuite/ChangeLog:

	PR tree-optimization/113364
	* gcc.dg/vect/vect-early-break_107-pr113364.c: New test.